--- a/packages/SettingsLib/SegmentedButtonPreference/res/layout/settingslib_expressive_preference_segmentedbutton.xml
+++ b/packages/SettingsLib/SegmentedButtonPreference/res/layout/settingslib_expressive_preference_segmentedbutton.xml
@@ -20,10 +20,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:paddingTop="@dimen/settingslib_expressive_space_extrasmall4"
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">
 
     <com.google.android.material.button.MaterialButtonToggleGroup
+        android:theme="@style/Theme.Material3.DynamicColors.DayNight"
         android:id="@+id/button_group"
         style="@style/Widget.Material3Expressive.MaterialButtonGroup.Connected"
         android:layout_width="match_parent"
@@ -36,24 +38,28 @@
             android:layout_weight="1"
             app:iconPadding="0dp"
             app:iconGravity="textStart"
+            android:visibility="gone"
             style="@style/SettingsLibButtonStyle.Expressive.Tonal.Large"/>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_2"
             android:layout_weight="1"
             app:iconPadding="0dp"
             app:iconGravity="textStart"
+            android:visibility="gone"
             style="@style/SettingsLibButtonStyle.Expressive.Tonal.Large"/>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_3"
             android:layout_weight="1"
             app:iconPadding="0dp"
             app:iconGravity="textStart"
+            android:visibility="gone"
             style="@style/SettingsLibButtonStyle.Expressive.Tonal.Large"/>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/button_4"
             android:layout_weight="1"
             app:iconPadding="0dp"
             app:iconGravity="textStart"
+            android:visibility="gone"
             style="@style/SettingsLibButtonStyle.Expressive.Tonal.Large"/>
     </com.google.android.material.button.MaterialButtonToggleGroup>
 
@@ -72,7 +78,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.SettingsLib.TitleSmall.Emphasized"
-            android:textColor="@color/settingslib_materialColorOnSurface" />
+            android:textColor="@color/settingslib_materialColorOnSurface"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/button_2_text"
@@ -81,7 +88,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.SettingsLib.TitleSmall.Emphasized"
-            android:textColor="@color/settingslib_materialColorOnSurface" />
+            android:textColor="@color/settingslib_materialColorOnSurface"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/button_3_text"
@@ -90,7 +98,8 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.SettingsLib.TitleSmall.Emphasized"
-            android:textColor="@color/settingslib_materialColorOnSurface" />
+            android:textColor="@color/settingslib_materialColorOnSurface"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/button_4_text"
@@ -99,6 +108,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.SettingsLib.TitleSmall.Emphasized"
-            android:textColor="@color/settingslib_materialColorOnSurface" />
+            android:textColor="@color/settingslib_materialColorOnSurface"
+            android:visibility="gone" />
     </LinearLayout>
 </LinearLayout>
