Flag new default tiles and default large tiles
Test: manual, reset tiles
Fixes: 404501518
Flag: com.android.systemui.qs_ui_refactor_compose_fragment
Change-Id: Icd0dcf4b388b959d4262c6b3a4f52ee87d9fd262

--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -105,6 +105,11 @@
         internet,bt,flashlight,dnd,alarm,airplane,controls,wallet,rotation,battery,cast,screenrecord,mictoggle,cameratoggle,custom(com.android.permissioncontroller/.permission.service.v33.SafetyCenterQsTileService)
     </string>
 
+    <!-- The default tiles to display in QuickSettings with the new UI -->
+    <string name="quick_settings_tiles_new_default" translatable="false">
+        internet,bt,dnd,cast,flashlight,airplane,rotation,wallet,alarm,controls,screenrecord,battery
+    </string>
+
     <!-- The class path of the Safety Quick Settings Tile -->
     <string name="safety_quick_settings_tile_class" translatable="false">
         com.android.permissioncontroller.permission.service.v33.SafetyCenterQsTileService
