RONs permissions - Show app name instead of package name in guts demotion explanation.
Also update demotion explanation layout, and add call to
demotion coordinator.

Bug: 379186372
Test: atest SystemUiTests
Flag: com.android.systemui.permission_helper_inline_ui_rich_ongoing
Change-Id: I0f023a0e01c63686386b102f7c2a7fc6dcb3858f

--- a/packages/SystemUI/res/layout/promoted_permission_guts.xml
+++ b/packages/SystemUI/res/layout/promoted_permission_guts.xml
@@ -48,9 +48,8 @@
             android:layout_width="400dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
+            android:layout_centerHorizontal="true"
             android:layout_below="@id/unpin_icon"
-            android:layout_toLeftOf="@id/undo"
-            android:padding="@*android:dimen/notification_content_margin_end"
             android:textColor="@androidprv:color/materialColorOnSurface"
             android:minWidth="@dimen/min_clickable_item_size"
             android:minHeight="@dimen/min_clickable_item_size"
@@ -60,8 +59,8 @@
             android:id="@+id/undo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/unpin_icon"
-            android:layout_alignParentRight="true"
+            android:layout_below="@id/demote_explain"
+            android:layout_centerHorizontal="true"
             android:padding="@*android:dimen/notification_content_margin_end"
             android:textColor="@androidprv:color/materialColorOnSurface"
             android:minWidth="@dimen/min_clickable_item_size"
