--- a/libs/WindowManager/Shell/shared/res/values/dimen.xml
+++ b/libs/WindowManager/Shell/shared/res/values/dimen.xml
@@ -45,10 +45,10 @@
     <dimen name="drop_target_full_screen_padding">20dp</dimen>
     <dimen name="drop_target_desktop_window_padding_small">100dp</dimen>
     <dimen name="drop_target_desktop_window_padding_large">130dp</dimen>
-    <dimen name="drop_target_expanded_view_width">330</dimen>
-    <dimen name="drop_target_expanded_view_height">578</dimen>
-    <dimen name="drop_target_expanded_view_padding_bottom">108</dimen>
-    <dimen name="drop_target_expanded_view_padding_horizontal">24</dimen>
+    <dimen name="drop_target_expanded_view_width">330dp</dimen>
+    <dimen name="drop_target_expanded_view_height">578dp</dimen>
+    <dimen name="drop_target_expanded_view_padding_bottom">108dp</dimen>
+    <dimen name="drop_target_expanded_view_padding_horizontal">24dp</dimen>
 
     <!-- The corner radius of freeform tasks in desktop windowing. -->
     <dimen name="desktop_windowing_freeform_rounded_corner_radius">16dp</dimen>
