Add long press button to autoclick panel
Initial commit for adding long press button to autoclick panel.
Actual long press logic will be implemented in a follow up cl.

Screenshot:
 - collapsed: go/screenshot-8rl4hfq4taxpjuq
 - expanded: go/screenshot-aipkmekdzf2evhf

Bug: 400744833
Test: atest AutoclickControllerTest, also manually verified in
      test devices.
Flag: com.android.server.accessibility.enable_autoclick_indicator
Change-Id: Ibc55562c57293519fe265e973cb19666f20097fa

--- a/core/res/res/layout/accessibility_autoclick_type_panel.xml
+++ b/core/res/res/layout/accessibility_autoclick_type_panel.xml
@@ -42,6 +42,18 @@
             android:padding="3dp">
 
             <LinearLayout
+                android:id="@+id/accessibility_autoclick_long_press_layout"
+                style="@style/AccessibilityAutoclickPanelButtonLayoutStyle">
+
+                <ImageButton
+                    android:id="@+id/accessibility_autoclick_long_press_button"
+                    style="@style/AccessibilityAutoclickPanelImageButtonStyle"
+                    android:contentDescription="@string/accessibility_autoclick_long_press"
+                    android:src="@drawable/accessibility_autoclick_long_press"
+                    android:clickable="false" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/accessibility_autoclick_drag_layout"
                 style="@style/AccessibilityAutoclickPanelButtonLayoutStyle">
 
