[SB][Chips] Give chips on larger screens a bigger max width.
Fixes: 402138991
Flag: android.app.ui_rich_ongoing

Test: Foldable: post notification with long shortCriticalText ->
verify chip shows no text when folded (for both portrait & landscape),
verify chip does show text when unfolded (for both portrait & landscape)
Test: Typical phone-sized device: post notification with long
shortCriticalText -> verify chip shows no text for both portrait &
landscape
Test: post notification with short shortCriticalText -> verify text
shows on all device sizes & orientations

Change-Id: I0175ac194d3370a13229d6704d885f07b8cffbc2

--- a/packages/SystemUI/res/values-sw720dp/dimens.xml
+++ b/packages/SystemUI/res/values-sw720dp/dimens.xml
@@ -29,5 +29,8 @@
 
     <!-- Biometric Auth pattern view size, better to align keyguard_security_width -->
     <dimen name="biometric_auth_pattern_view_size">348dp</dimen>
+
+    <!-- Ongoing activity chips -->
+    <dimen name="ongoing_activity_chip_max_text_width">98dp</dimen>
 </resources>
 
