--- a/packages/SettingsLib/CardPreference/res/layout/settingslib_expressive_preference_card.xml
+++ b/packages/SettingsLib/CardPreference/res/layout/settingslib_expressive_preference_card.xml
@@ -69,13 +69,11 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@android:id/closeButton"
+            android:id="@android:id/icon1"
             android:layout_width="@dimen/settingslib_expressive_space_medium4"
             android:layout_height="@dimen/settingslib_expressive_space_medium4"
             android:padding="@dimen/settingslib_expressive_space_extrasmall4"
             android:layout_gravity="center"
-            android:contentDescription="@string/settingslib_dismiss_button_content_description"
-            android:src="@drawable/settingslib_expressive_icon_close"
             android:tint="@color/settingslib_materialColorOnSecondary" />
 
     </LinearLayout>
