Align message TextView of the Add user dialog to 'start'.
Change gravity of the TextView from 'center' to 'start'

Bug: 406111400
Test: manual
Flag: EXEMPT no functional changes
Change-Id: Id13683d7e7fb3c3ea31c65094c9d0b223779a9c7

--- a/packages/SettingsLib/res/layout/edit_user_info_dialog_content.xml
+++ b/packages/SettingsLib/res/layout/edit_user_info_dialog_content.xml
@@ -40,7 +40,7 @@
     </FrameLayout>
     <TextView
         android:id="@+id/edit_user_info_message"
-        android:gravity="center"
+        android:gravity="start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
