--- a/packages/SettingsLib/res/layout/dialog_with_icon.xml
+++ b/packages/SettingsLib/res/layout/dialog_with_icon.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hyphenationFrequency="fullFast"
-            android:gravity="center"
+            android:gravity="start"
             style="@style/TextAppearanceSmall"/>
 
         <LinearLayout
