[Expressive] Update button preference padding for expressive design
- Added 16dp padding to top and bottom.
- Create SettingsLibButtonPreferenceStyle and SettingsLibButtonPreferenceStyle.Expressive to manage common styles

Fix: 402821431
Test: presubmit + manual
Flag: EXEMPT resource only
Change-Id: Ic9389fde45bc4dc11ff97e6ed48b7847be5a4b3e

--- a/packages/SettingsLib/ButtonPreference/res/values/styles.xml
+++ b/packages/SettingsLib/ButtonPreference/res/values/styles.xml
@@ -59,4 +59,11 @@
         <item name="android:textColor">@color/settingslib_materialColorOnSurface</item>
         <item name="android:importantForAccessibility">no</item>
     </style>
+
+    <style name="SettingsLibButtonPreferenceStyle">
+        <item name="android:orientation">vertical</item>
+        <item name="android:paddingStart">?android:attr/listPreferredItemPaddingStart</item>
+        <item name="android:paddingEnd">?android:attr/listPreferredItemPaddingEnd</item>
+        <item name="android:filterTouchesWhenObscured">true</item>
+    </style>
 </resources>
