--- a/packages/SettingsLib/ButtonPreference/res/layout/settingslib_number_button.xml
+++ b/packages/SettingsLib/ButtonPreference/res/layout/settingslib_number_button.xml
@@ -18,10 +18,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
-    android:paddingVertical="@dimen/settingslib_expressive_space_extrasmall4">
+    style="@style/SettingsLibButtonPreferenceStyle"
+    android:paddingVertical="@dimen/settingslib_expressive_space_extrasmall4"
+    android:filterTouchesWhenObscured="true">
 
     <LinearLayout
         android:id="@+id/settingslib_number_button"
