--- a/packages/SettingsLib/ButtonPreference/res/values-v36/styles.xml
+++ b/packages/SettingsLib/ButtonPreference/res/values-v36/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2024 The Android Open Source Project
+     Copyright (C) 2025 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,15 +14,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    style="@style/SettingsLibButtonPreferenceStyle.Expressive"
-    android:filterTouchesWhenObscured="true">
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/settingslib_button"
-        style="@style/SettingsLibButtonStyle.Expressive.Filled.Extra" />
-
-</LinearLayout>
+<resources>
+    <style name="SettingsLibButtonPreferenceStyle.Expressive">
+        <item name="android:paddingVertical">@dimen/settingslib_expressive_space_small1</item>
+    </style>
+</resources>
